smb: Ignore EINVAL for kerberos/ccache login

With samba 4.16.0, mount operation fails with the "Invalid Argument" error
when kerberos/ccache is misconfigured. Ignore this error, so user get a chance
to login using the password...

Fixes: https://gitlab.gnome.org/GNOME/gvfs/-/issues/611


(cherry picked from commit 747c7f6ea6c8b6a7ccd008bb47996ba7eb169bcc)